--- a/index.html
+++ b/index.html
@@ -113,21 +113,21 @@
                             <i class="fa fa-check fa-2x circled bg-skin float-left"></i>
                             <h5>Modern interface</h5>
                             <p>
-                                Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis eligendi ne.
+                                Beautiful and responsive UI was created by one of most talented itStep graduates.
                             </p>
                         </div>
                         <div class="features">
                             <i class="fa fa-check fa-2x circled bg-skin float-left"></i>
                             <h5>Easy to use</h5>
                             <p>
-                                Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis eligendi ne.
+                                Even your old and conservative granny will be able to use <strong>Skeptikos</strong> and track her expenses.
                             </p>
                         </div>
                         <div class="features">
                             <i class="fa fa-check fa-2x circled bg-skin float-left"></i>
                             <h5>Free updates</h5>
                             <p>
-                                Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis eligendi ne.
+                                Will be available as soon as we find $25 for Google Play developer account.
                             </p>
                         </div>
                     </div>
@@ -152,11 +152,7 @@
                 <div class="col-md-6">
                     <div class="wow fadeInLeft" data-wow-delay="0.2s">
                         <p>
-                            Lorem ipsum dolor sit amet, ipsum vocent reprimique ad eos, ludus option signiferumque an pro. Id case quaestio mei, an ipsum offendit vel, ex ius quis comprehensam. Eu per illud modus
-                            fabellas, eam an brute gubergren repudiandae.
-                        </p>
-                        <p>
-                            Eam voluptua assentior ea, an eirmod sensibus scribentur vel. Elit nonumy indoctum per eu. Feugait omittantur ne qui, commodo invidunt ea nam
+                            Features like comparing prices between local supermarkets, notifications about sales nearby and other useful stuff will be added later.
                         </p>
                         <div class="divider-short marginbot-30 margintop-30"></div>
                         <div class="features">
@@ -185,42 +181,42 @@
     </section>
     <!-- /Section: content -->
 
-    <div class="divider-short"></div>
-    <section id="works" class="home-section text-center">
-        <div class="container">
-            <div class="row text-center heading">
-                <h3>Screenshots</h3>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-12">
+    <!--<div class="divider-short"></div>-->
+    <!--<section id="works" class="home-section text-center">-->
+        <!--<div class="container">-->
+            <!--<div class="row text-center heading">-->
+                <!--<h3>Screenshots</h3>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<div class="col-sm-12 col-md-12 col-lg-12">-->
 
-                    <div class="row gallery-item">
-                        <div class="col-md-3">
-                            <a href="img/works/1.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">
-                                <img src="img/works/1.jpg" class="img-responsive" alt="img">
-                            </a>
-                        </div>
-                        <div class="col-md-3">
-                            <a href="img/works/2.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">
-                                <img src="img/works/2.jpg" class="img-responsive" alt="img">
-                            </a>
-                        </div>
-                        <div class="col-md-3">
-                            <a href="img/works/3.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">
-                                <img src="img/works/3.jpg" class="img-responsive" alt="img">
-                            </a>
-                        </div>
-                        <div class="col-md-3">
-                            <a href="img/works/4.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">
-                                <img src="img/works/4.jpg" class="img-responsive" alt="img">
-                            </a>
-                        </div>
-                    </div>
+                    <!--<div class="row gallery-item">-->
+                        <!--<div class="col-md-3">-->
+                            <!--<a href="img/works/1.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">-->
+                                <!--<img src="img/works/1.jpg" class="img-responsive" alt="img">-->
+                            <!--</a>-->
+                        <!--</div>-->
+                        <!--<div class="col-md-3">-->
+                            <!--<a href="img/works/2.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">-->
+                                <!--<img src="img/works/2.jpg" class="img-responsive" alt="img">-->
+                            <!--</a>-->
+                        <!--</div>-->
+                        <!--<div class="col-md-3">-->
+                            <!--<a href="img/works/3.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">-->
+                                <!--<img src="img/works/3.jpg" class="img-responsive" alt="img">-->
+                            <!--</a>-->
+                        <!--</div>-->
+                        <!--<div class="col-md-3">-->
+                            <!--<a href="img/works/4.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg">-->
+                                <!--<img src="img/works/4.jpg" class="img-responsive" alt="img">-->
+                            <!--</a>-->
+                        <!--</div>-->
+                    <!--</div>-->
 
-                </div>
-            </div>
-        </div>
-    </section>
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</section>-->
 
 
     <section id="callaction" class="home-section paddingtop-40">
@@ -239,7 +235,7 @@
                             <div class="col-md-4">
                                 <div class="wow lightSpeedIn" data-wow-delay="0.1s">
                                     <div class="cta-btn">
-                                        <a href="#" class="btn btn-skin btn-lg">Contact us</a>
+                                        <a href="mailto:topin2122@gmail.com" class="btn btn-skin btn-lg">Contact us</a>
                                     </div>
                                 </div>
                             </div>
@@ -258,10 +254,10 @@
                 <div class="row">
                     <div class="col-sm-6 col-md-6 col-lg-6">
                         <ul class="social">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                            <li><a ><i class="fa fa-facebook"></i></a></li>
+                            <li><a ><i class="fa fa-twitter"></i></a></li>
+                            <li><a ><i class="fa fa-dribbble"></i></a></li>
+                            <li><a ><i class="fa fa-youtube"></i></a></li>
                         </ul>
 
                         <div class="wow fadeInLeft" data-wow-delay="0.1s">
