--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
                     <li>
                         <div id="cart"></div>
                     </li>
-                    <li class="active"><a href="#intro">Home</a></li>
+                    <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="https://github.com/sshaddicts">Github organization</a></li>
+                    <li><a href="docs.html">Projects Documentation</a></li>
 
                 </ul>
             </div>
